# anishot

./: .gitignore  README.md  package.json  pyproject.toml  server.py
.github/workflows/: release.yml  zippush.yml
extension/: README.md  manifest.json  package.json
extension/static/: background.js  index.html  script.js  styles.css
static/: background.js  index.html  script.js
